Adicionado o conteudo do README.md

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <label for="rg">RG:</label>
             <input inputmode="numeric" id="rg" />
             <fieldset>
-                <legend>Qual seu sexo?</legend>
+                <legend>Sexo:</legend>
                 <label for="f">Feminino</label>
                 <input type="radio" id="f" name="sexo" value="f" />
                 <label for="m">Masculino</label>
